--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 hs_err_pid*
 replay_pid*
 
+# Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
+.kotlin/
+
 # IDE working files
 *.iws
 *.ipr
@@ -56,3 +59,19 @@ libpeerconnection.log
 ehthumbs.db
 Icon?
 Thumbs.db
+
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
